[gd_scene load_steps=3 format=3 uid="uid://4p8k0lrj74ry"]

[ext_resource type="Texture2D" uid="uid://bf7hfqrdt2fjm" path="res://sprites/tiles/grass.png" id="1_kq820"]
[ext_resource type="Script" path="res://scripts/score.gd" id="1_l1ds4"]

[node name="Score" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l1ds4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 800.0
offset_bottom = 800.0
texture = ExtResource("1_kq820")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
offset_left = 104.0
offset_top = 60.0
offset_right = 683.0
offset_bottom = 186.0
theme_override_font_sizes/font_size = 90
text = "You died!"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 142.0
offset_top = 201.0
offset_right = 651.0
offset_bottom = 468.0
color = Color(0, 0, 0, 0.435294)

[node name="ScoreLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 483.0
offset_bottom = 255.0
theme_override_font_sizes/font_size = 30
text = "SCORE: 0
BEST: 0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 517.0
offset_right = 651.0
offset_bottom = 612.0
theme_override_font_sizes/font_size = 40
text = "MENU"

[node name="PlayAgainButton" type="Button" parent="."]
layout_mode = 0
offset_left = 142.0
offset_top = 656.0
offset_right = 646.0
offset_bottom = 743.0
theme_override_font_sizes/font_size = 40
text = "PLAY AGAIN"

[connection signal="button_down" from="MenuButton" to="." method="_on_menu_button_button_down"]
[connection signal="button_down" from="PlayAgainButton" to="." method="_on_play_again_button_button_down"]
